# Fastapi-Notebook

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  extension.sql  pyproject.toml  requirements.txt
api/: crud.py  main.py
app/: main.py
app/api/db/crud/: notes.py  users.py
app/api/db/migrations/: migration.py
app/api/db/schemas/: main.py
app/api/dependencies/: database.py
app/api/routes/: api.py  notes.py  users.py
app/core/: config.py  events.py
app/db/: errors.py  events.py
app/db/migrations/: env.py
app/db/migrations/versions/: first_migrate.sql
app/db/queries/: queries.py
app/db/queries/sql/: notes.sql  users.sql
app/db/repositories/: notes.py  users.py
app/models/: models.py
app/models/schemas/: notes.py  users.py
