[tool.poetry]
name = "fastapi-notebook"
version = "0.1.0"
description = "The API to create user notes."
authors = ["dt50 <alexfretka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
asyncpg = "^0.20.1"
uvicorn = "^0.11.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
